appId: host.exp.Exponent
name: Test Flow
---
- launchApp
- tapOn:
    text: "guinea-pig-expo"
- tapOn:
    text: "Explore, tab, 2 of 2"
- tapOn:
    text: "Home, tab, 1 of 2"